--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                     <table border="1">
                         <tr><th colspan="2"><h2>Lista de formandos</h2></th></tr>
                         <tr><th width="50">Grupo</th><th>Nome</th></tr>
-                        <tr><td rowspan="5" align="center">1</td><td>coloque aqui a referencia para a sua página ...</td></tr>
+                        <tr><td rowspan="5" align="center">1</td><td><a href="alex.html">Alex</a></td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
