--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td rowspan="5" align="center">4</td><td><a href="jorge.html">Página do Jor</a></td></tr>
+                        <tr><td rowspan="5" align="center">4</td><td><a href="jorge.html">Página do jorge</a></td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
