--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td rowspan="5" align="center">2</td><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
+                        <tr><td rowspan="5" align="center">4</td><td><a href="sergio.html">Página do sergio</a></td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
