--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                         <tr><th colspan="2"><h2>Lista de formandos</h2></th></tr>
                         <tr><th width="50">Grupo</th><th>Nome</th></tr>
                         <tr><td rowspan="5" align="center">1</td><td><a href="alex.html">Alex</a></td></tr>
-                        <tr><td><a href="jorge.html">Página do Jorge</a></td></tr>
+                        <tr><td><a href="jorge.html">Jorge Henriques</a></td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
                         <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
