--- a/joaomartins.html
+++ b/joaomartins.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>João Martins</h1>
 	<h2>About Me</h2>
-
+	<img src="https://th.bing.com/th/id/OIP.h9czukiF0R7uwoiHc0EKWQHaEo?pid=Api&rs=1">
 	This is the info about me.<br>
 	This is the info about me.<br>
 	This is the info about me.<br>
