--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <td><a href="LeandroCosta.html" /> Leandro Costa</td>
             </tr>
             <tr>
-              <td<a href="joao.html">João Oliveira</a></td>
+              <td><a href="joao.html">João Oliveira</a></td>
             </tr>
             <tr>
               <td rowspan="5" align="center">2</td>
