adição do html José franco e do meu nome à tabela

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </tr>
             <tr>
               <td rowspan="5" align="center">2</td>
-              <td></td>
+              <td><a href="JoseFranco.html">José Franco</a></td>
             </tr>
             <tr>
               <td><a href="victor.html">Victor Duarte</a></td>
