--- a/index.html
+++ b/index.html
@@ -1,41 +1,4 @@
-                        <tr><td rowspan="5" align="center">1</td><td><a href="alex.html">Alex</a></td></tr>
-<<<<<<< HEAD
-                        <tr><td><a href="jorge.html">Jorge Henriques</a></td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td rowspan="5" align="center">2</td><td><a href="caioreis.html">Caio Reis</a></td></tr>
-=======
-                        <tr><td><a href="victor.html"></a></td></tr>
->>>>>>> eb2c5769958db9ac45767d3bca1b73c94bf3bb81
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td><a href="paulo.html">PauloSilva</a></td></tr>
-                        <tr><td rowspan="5" align="center">2</td><td><a href="joaovv.html">Joao VV</a>.</td></tr>
->>>>>>> 27a5e799f845219af46f1cc28da0dd897a2f7225
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td rowspan="5" align="center">3</td><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td rowspan="5" align="center">4</td><td><a href="jorge.html">Página do Jor</a></td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                        <tr><td>coloque aqui a referencia para a sua página ...</td></tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-    </body>
-=======
 
->>>>>>> 8e52372e032f01e90c50409132048d72da3008e3
->>>>>>> 27a5e799f845219af46f1cc28da0dd897a2f7225
   <head>
     <title>
       Lista de formandos inscritos no curso de .NET-UPskill no P.PORTO
@@ -64,7 +27,7 @@
               <td><a href="jorge.html">Jorge Henriques</a></td>
             </tr>
             <tr>
-              <td></td>
+              <td>coloque aqui a referencia para a sua página ...</td>
             </tr>
             <tr>
                 <td><a href="LeandroCosta.html" /> Leandro Costa</td>
@@ -77,7 +40,7 @@
               <td></td>
             </tr>
             <tr>
-              <td></td>
+              <td>coloque aqui a referencia para a sua página ...</td>
             </tr>
             <tr>
               <td>coloque aqui a referencia para a sua página ...</td>
@@ -88,7 +51,7 @@
             <td><a href="danielmacedo.html">Daniel Costa Macedo</a></td>
             <tr>
               <td rowspan="5" align="center">3</td>
-              <td></td>
+              <td>coloque aqui a referencia para a sua página ...</td>
             </tr>
             <tr>
               <td><a href="victor.html">Victor Duarte</a></td>
@@ -123,14 +86,3 @@
       </tr>
     </table>
   </body>
-<<<<<<< HEAD
->>>>>>> 30c7c79070212e3a1bde25107464c3bace1a13d8
-=======
-<<<<<<< HEAD
->>>>>>> 30c7c79070212e3a1bde25107464c3bace1a13d8
->>>>>>> eb2c5769958db9ac45767d3bca1b73c94bf3bb81
-=======
->>>>>>> 1291f8afe5df9f0edba64e4883a0b54a8feffb28
->>>>>>> 27a5e799f845219af46f1cc28da0dd897a2f7225
-</html>
->>>>>>> 04971d87a8e12243d0ee52ab14cdc6f4d759714e
