Mais um conflito resolvido

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
   <head>
     <title>
       Lista de formandos inscritos no curso de .NET-UPskill no P.PORTO
@@ -37,7 +36,7 @@
             </tr>
             <tr>
               <td rowspan="5" align="center">2</td>
-              <td></td>
+              <td>coloque aqui a referencia para a sua página ...</td>
             </tr>
             <tr>
               <td>coloque aqui a referencia para a sua página ...</td>
