--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <td><a href="caioreis.html">Caio Reis</a></td>
             </tr>
             <tr>
-              <td>coloque aqui a referencia para a sua página ...</td>
+              <td><a href="MarianaGomes.html">Mariana Gomes</a></td>
             </tr>
             <tr>
               <td>coloque aqui a referencia para a sua página ...</td>
