changed sergio.html file

--- a/sergio.html
+++ b/sergio.html
@@ -3,6 +3,8 @@
         <title>Sergio Pinto</title>
     </head>
     <body>
+    	<h1>Sérgio Pinto</h1>
+    	<h2>ROLE</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum aspernatur, repellat cupiditate maiores quos distinctio deserunt modi quis nobis rem, iusto itaque, voluptatem minima quia neque cum? Dolorem, voluptate voluptates!Lorem</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa natus architecto itaque atque ipsum, tempore necessitatibus iure odio molestiae incidunt est labore, cumque quisquam! Illo excepturi, ipsa architecto sit laborum.</p>
         <p>Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Amet sapiente dicta, iste iure exercitationem necessitatibus quaerat quasi. Eveniet, soluta neque nemo animi illum, atque distinctio natus, dolorem velit commodi, quae?</p>
