Tiago Azevedo added in index

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <td><a href="caioreis.html">Caio Reis</a></td>
             </tr>
             <tr>
-              <td>coloque aqui a referencia para a sua página ...</td>
+              <td><a href="tiagoazevedo.html">Tiago Azevedo</a></td>.</td>
             </tr>
             <tr>
               <td><a href="sergio.html">Sergio Pinto</td>
